# Alkahest

./: Cargo.toml
src/: main.rs
src/server/: credentials.rs
src/server/local_actions/: local_command.rs
src/server/misc/: class.rs
src/server/remote_actions/: download_file.rs  execute_command.rs  install_package.rs  manage_packages.rs  remote_action.rs  upload_file.rs  upload_folder.rs
src/server/server_management/: action_collection.rs  session_manager.rs
