[package]
name = "alkahest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
druid = "0.8.3"
ssh2 = "0.9.4"
thiserror = "1.0.56"
#tokio = "1.35.1"
tokio = { version = "1.35.1", features = ["full"] }
